--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dapp": "yarn workspace nftyfinance-dapp",
     "faucet": "yarn workspace nftyfinance-faucet",
     "subgraph": "yarn workspace nftyfinance-subgraph",
+    "dapp-v1": "yarn workspace nftyfinance-dapp-v1",
     "graph-node": "cd ../graph-node/docker && rm -rf data && docker compose down && docker compose up",
     "deploy:local": "yarn contracts deploy:local && yarn subgraph deploy:local",
     "build:dapp": "yarn contracts build && yarn dapp build:prod",
@@ -16,6 +17,7 @@
     "contracts",
     "dapp",
     "faucet",
-    "subgraph"
+    "subgraph",
+    "dapp-v1"
   ]
 }
