--- a/dapp/tsconfig.json
+++ b/dapp/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "paths": {
+      "@/*": ["dapp/src/*"]
+    }
+  }
   "include": ["src"]
-  "@/*": ["./dapp/src/*"]
 }
