--- a/dapp-v1/package.json
+++ b/dapp-v1/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@graphprotocol/client-urql": "^2.0.0",
+    "@tanstack/react-virtual": "^3.0.0-beta.36",
     "buffer": "^6.0.3",
     "connectkit": "^1.4.0",
     "graphql": "^16.7.1",
