--- a/dapp-v1/package.json
+++ b/dapp-v1/package.json
@@ -23,6 +23,7 @@
     "wagmi": "^1.0.6"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^4.0.0",
