--- a/dapp-v1/package.json
+++ b/dapp-v1/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@graphprotocol/client-urql": "^2.0.0",
+    "@nftylabs/nft-lists": "^0.0.1",
     "@tanstack/react-virtual": "^3.0.0-beta.36",
-    "@nftyfinance/nft-lists": "git+ssh://git@github.com:NFTYLabs/nft-lists.git",
     "@uniswap/token-lists": "^1.0.0-beta.33",
     "buffer": "^6.0.3",
     "connectkit": "^1.4.0",
