--- a/contracts/package.json
+++ b/contracts/package.json
@@ -3,11 +3,10 @@
   "version": "0.0.1",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "yarn hardhat clean && yarn hardhat compile && yarn wagmi generate",
+    "build": "yarn hardhat clean && yarn hardhat compile",
     "start": "yarn hardhat node",
     "test": "yarn hardhat test",
-    "generate": "yarn wagmi generate",
-    "deploy:local": "yarn hardhat clean && yarn hardhat compile && yarn hardhat deploy --network localhost && yarn wagmi generate",
+    "deploy:local": "yarn hardhat clean && yarn hardhat compile && yarn hardhat deploy --network localhost",
     "mythril": "myth analyze contracts/contracts/NFTYFinanceV1.sol  --solc-json ./solc.json",
     "slither": "yarn hardhat clean && yarn hardhat compile && slither . --checklist --show-ignored-findings"
   },
@@ -26,7 +25,6 @@
     "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.16.2",
-    "@wagmi/cli": "^0.1.15",
     "chai": "^4.3.7",
     "dotenv": "^16.3.1",
     "erc721a": "^4.2.3",
