--- a/dapp-v1/package.json
+++ b/dapp-v1/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "generate": "wagmi generate",
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -12,6 +13,7 @@
     "@nftylabs/nft-lists": "^0.0.1",
     "@tanstack/react-virtual": "^3.0.0-beta.36",
     "@uniswap/token-lists": "^1.0.0-beta.33",
+    "@wagmi/cli": "^1.3.0",
     "buffer": "^6.0.3",
     "connectkit": "^1.4.0",
     "graphql": "^16.7.1",
