--- a/dapp-v1/package.json
+++ b/dapp-v1/package.json
@@ -9,29 +9,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@graphprotocol/client-cli": "^3.0.0",
     "@graphprotocol/client-urql": "^2.0.0",
     "@nftylabs/nft-lists": "^0.0.2",
-    "@tanstack/react-virtual": "^3.0.0-beta.36",
+    "@tanstack/react-virtual": "^3.0.1",
     "@uniswap/token-lists": "^1.0.0-beta.33",
-    "@wagmi/cli": "^1.3.0",
     "buffer": "^6.0.3",
-    "connectkit": "^1.4.0",
-    "graphql": "^16.7.1",
+    "connectkit": "^1.5.3",
+    "graphql": "^16.8.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
-    "urql": "^4.0.5",
-    "util": "^0.12.4",
-    "viem": "~0.3.36",
-    "wagmi": "^1.0.6"
+    "react-router-dom": "^6.20.1",
+    "urql": "^4.0.6",
+    "util": "^0.12.5",
+    "viem": "^1.19.11",
+    "wagmi": "^1.4.8"
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.2.6",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
-    "@vitejs/plugin-react": "^4.0.0",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.5"
+    "@types/bootstrap": "^5.2.10",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@wagmi/cli": "^1.5.2",
+    "vite": "^5.0.6"
   }
 }
