--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nftyfinance-monorepo",
   "version": "0.0.1",
   "private": "true",
+  "type": "module",
   "scripts": {
     "contracts": "yarn workspace nftyfinance-contracts",
     "dapp": "yarn workspace nftyfinance-dapp",
@@ -15,9 +16,12 @@
   },
   "workspaces": [
     "contracts",
-    "dapp",
     "faucet",
     "subgraph",
     "dapp-v1"
-  ]
+  ],
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.3"
+  }
 }
