--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -6,17 +6,13 @@
     "deploy:goerli": "graph codegen && graph deploy --node https://api.studio.thegraph.com/deploy/ nftyfinance-goerli --network goerli",
     "deploy:mumbai": "graph codegen && graph deploy --node https://api.studio.thegraph.com/deploy/ nftyfinance-mumbai --network mumbai",
     "deploy:local": "graph codegen && graph remove --node http://localhost:8020/ nftyfinance-local && graph create --node http://localhost:8020/ nftyfinance-local && graph deploy -l 0.0.1 --node http://localhost:8020/ --ipfs http://localhost:5001 nftyfinance-local --network mainnet",
-    "format": "rome format ./src",
-    "format:write": "rome format ./src --write",
-    "lint": "rome check ./src ",
     "test": "graph test"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.48.0",
-    "@graphprotocol/graph-ts": "0.29.3"
+    "@graphprotocol/graph-cli": "0.62.0",
+    "@graphprotocol/graph-ts": "0.31.0"
   },
   "devDependencies": {
-    "matchstick-as": "^0.5.2",
-    "rome": "^12.0.0"
+    "matchstick-as": "^0.6.0"
   }
 }
