Deployment to Sepolia testnet (#149)
* lockfile

* wip: bump contract deps

* upgrade contracts re: openzeppelin 5.0

* wip

* Updated tests and packages for contracts

* Update hardhat tasks

* Subgraph tests and deployment working

* Update faucet dependencies

* Contract and subgraph deployed, webapp builds working locally

---------

Co-authored-by: kvn <42082827+crypto-rizzo@users.noreply.github.com>

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -6,7 +6,8 @@
     "build": "yarn hardhat clean && yarn hardhat compile",
     "start": "yarn hardhat node",
     "test": "yarn hardhat test",
-    "deploy:local": "yarn hardhat clean && yarn hardhat compile && yarn hardhat deploy --network localhost",
+    "deploy:local": "yarn build && yarn hardhat deploy --network localhost",
+    "deploy:testnet": "yarn build && yarn hardhat deploy --network sepolia",
     "mythril": "myth analyze contracts/contracts/NFTYFinanceV1.sol  --solc-json ./solc.json",
     "slither": "yarn hardhat clean && yarn hardhat compile && slither . --checklist --show-ignored-findings"
   },
