--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "type": "module",
   "scripts": {
     "contracts": "yarn workspace nftyfinance-contracts",
-    "dapp": "yarn workspace nftyfinance-dapp",
     "faucet": "yarn workspace nftyfinance-faucet",
     "subgraph": "yarn workspace nftyfinance-subgraph",
-    "dapp-v1": "yarn workspace nftyfinance-dapp-v1",
+    "dapp": "yarn workspace nftyfinance-dapp-v1",
     "graph-node": "cd ../graph-node/docker && rm -rf data && docker compose down && docker compose up",
-    "deploy:local": "yarn contracts deploy:local && yarn subgraph deploy:local && yarn dapp-v1 generate ",
-    "build:dapp": "yarn contracts build && yarn dapp build:prod",
-    "build:faucet": "yarn contracts build && yarn faucet build"
+    "deploy:local": "yarn contracts deploy:local && yarn subgraph deploy:local && yarn dapp generate ",
+    "build:dapp": "yarn dapp build",
+    "build:faucet": "yarn faucet build"
   },
   "workspaces": [
     "contracts",
