--- a/dapp-v1/package.json
+++ b/dapp-v1/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "generate": "graphclient build && wagmi generate",
     "start": "vite",
-    "build": "tsc && vite build",
+    "build": "yarn generate && tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "@nftylabs/nft-lists": "^0.0.2",
     "@tanstack/react-virtual": "^3.0.1",
     "@uniswap/token-lists": "^1.0.0-beta.33",
+    "alchemy-sdk": "^3.1.0",
     "buffer": "^6.0.3",
     "connectkit": "^1.5.3",
     "graphql": "^16.8.1",
