--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "codegen": "graph codegen",
-    "deploy:goerli": "graph codegen && graph deploy --node https://api.studio.thegraph.com/deploy/ nftyfinance-goerli --network goerli",
-    "deploy:mumbai": "graph codegen && graph deploy --node https://api.studio.thegraph.com/deploy/ nftyfinance-mumbai --network mumbai",
+    "deploy:testnet": "graph codegen && graph deploy --product hosted-service skulltech/nftyfinance-sepolia --network sepolia",
     "deploy:local": "graph codegen && graph remove --node http://localhost:8020/ nftyfinance-local && graph create --node http://localhost:8020/ nftyfinance-local && graph deploy -l 0.0.1 --node http://localhost:8020/ --ipfs http://localhost:5001 nftyfinance-local --network mainnet",
     "test": "graph test"
   },
