Fix CI/CD (#199)
* add biome linter

* dapp ci/cd

* biome config

* biome config / schema

* consolidate .actions jobs in dapp & faucet

* remove slither from workflows

* add format command

* cleanup commands

* biome formatting

* biome linting

* cleanup imports

* lint fixes

* fix: noInnerDeclarations

* fix: noBannedTypes

* fix: useOptionalChain

* fix: noForEach

* fix: useLiteralKeys

* fix: noArrayIndexKey

* fix: noDoubleEquals

* fix: noImplicitAnyLet

* fix: noUselessElse

* fix: useTemplate

* fix: noVar

* fix: useValidAriaProps

* fix: useAriaPropsForRole

* fix: noRedundantAlt, useAltText

* unused import

* merge Base.tsx from master

* biome format

* lint

* address review, fix workflows

* unused imports

* TSC errors

* linting/formatting

--- a/.github/workflows/dapp.yml
+++ b/.github/workflows/dapp.yml
@@ -13,16 +13,6 @@ jobs:
     - name: Install node_modules
       working-directory: ./
       run: yarn dapp install
-    - name: Run ESlint checks
+    - name: Run Biome + TSC checks
       working-directory: ./
-      run: yarn dapp format:write;
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Install node_modules
-      working-directory: ./
-      run: yarn dapp install
-    - name: Run TypeScript type checks
-      working-directory: ./
-      run: yarn dapp tsc;
+      run: yarn dapp format; yarn dapp lint; yarn dapp tsc;
