--- a/dapp-v1/package.json
+++ b/dapp-v1/package.json
@@ -25,6 +25,7 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.20.1",
     "urql": "^4.0.6",
     "util": "^0.12.5",
