--- a/contracts/package.json
+++ b/contracts/package.json
@@ -8,7 +8,8 @@
     "start": "yarn hardhat node",
     "test": "yarn hardhat test",
     "deploy:local": "yarn build && yarn hardhat deploy --network localhost",
-    "deploy:testnet": "yarn build && yarn hardhat deploy --network sepolia",
+    "deploy:sepolia": "yarn build && yarn hardhat deploy --network sepolia",
+    "deploy:baseSepolia": "yarn build && yarn hardhat deploy --network baseSepolia",
     "mythril": "myth analyze contracts/contracts/NFTYFinanceV1.sol  --solc-json ./solc.json",
     "slither": "yarn hardhat clean && yarn hardhat compile && slither . --checklist --show-ignored-findings",
     "fuzz": "echidna ./test/GuardianAudits/fuzz/EchidnaRouter.sol --contract EchidnaRouter --config config.yaml",
