--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "scripts": {
     "codegen": "graph codegen",
-    "deploy:testnet": "graph codegen && graph deploy --product hosted-service skulltech/nftyfinance-sepolia --network sepolia",
+    "deploy:sepolia": "graph codegen && graph deploy --product hosted-service skulltech/nftyfinance-sepolia --network sepolia",
+    "deploy:baseSepolia": "graph codegen && graph deploy --product hosted-service crypto-rizzo/nftyfinance-base-sepolia --network base-sepolia",
     "deploy:local": "graph codegen && graph remove --node http://localhost:8020/ nftyfinance-local && graph create --node http://localhost:8020/ nftyfinance-local && graph deploy -l 0.0.1 --node http://localhost:8020/ --ipfs http://localhost:5001 nftyfinance-local --network mainnet",
     "test": "graph test"
   },
