Dx/lint format (#283)
* remove faucet github action

* dapp formatting

* dapp linting

* bump biome

* biome linting

* bump biome schema

* dapp formatting

* remove subgraph github action

* remove unused helpers/Toast

* cleanup
- consolide constants into ProtocolDefaults
- delete unused helpers/stringify

* more formatting

* remove unused helpers/utilts.truncateAddress

* remove engine from root package.json

* fix: add back missing index argument

* cleanup dapp github actions

* add env to github action

* update .env

--- a/.github/workflows/dapp.yml
+++ b/.github/workflows/dapp.yml
@@ -13,6 +13,12 @@ jobs:
     - name: Install node_modules
       working-directory: ./
       run: yarn dapp install
-    - name: Run Biome + TSC checks
+    - name: Run Biome
       working-directory: ./
-      run: yarn dapp format; yarn dapp lint; yarn dapp tsc;
+      run: yarn dapp format; yarn dapp lint;
+    - name: Build checks
+      env: # Or as an environment variable
+        PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+        VITE_GRAPHQL_ENDPOINT: https://api.thegraph.com/subgraphs/name/crypto-rizzo/nftyfinance-base-sepolia
+      working-directory: ./
+      run: yarn dapp build;
