--- a/dapp-v1/package.json
+++ b/dapp-v1/package.json
@@ -33,7 +33,7 @@
     "wagmi": "^1.4.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.5.2",
+    "@biomejs/biome": "1.6.3",
     "@types/bootstrap": "^5.2.10",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
