--- a/dapp-v1/package.json
+++ b/dapp-v1/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.20.1",
+    "react-window": "^1.8.10",
     "urql": "^4.0.6",
     "util": "^0.12.5",
     "viem": "^1.19.11",
@@ -36,6 +37,7 @@
     "@types/bootstrap": "^5.2.10",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^4.2.1",
     "@wagmi/cli": "^1.5.2",
     "vite": "^5.0.6"
