fix: use nodev18 in github action

--- a/.github/workflows/dapp.yml
+++ b/.github/workflows/dapp.yml
@@ -9,7 +9,10 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 18
     - name: Install node_modules
       working-directory: ./
       run: yarn dapp install
