Quick Loan Revamp (#348)
* quick loan revamp

* linting/formatting

--- a/dapp-v1/biome.json
+++ b/dapp-v1/biome.json
@@ -30,7 +30,8 @@
 			"style": {
 				"useSelfClosingElements": "off",
 				"noUnusedTemplateLiteral": "off",
-				"noNonNullAssertion": "off"
+				"noNonNullAssertion": "off",
+				"noUselessElse": "off"
 			},
 			"suspicious": {
 				"noExplicitAny": "off"
