--- a/dapp-v1/package.json
+++ b/dapp-v1/package.json
@@ -13,33 +13,30 @@
     "lint:apply": "yarn biome check --apply ./src"
   },
   "dependencies": {
-    "@graphprotocol/client-cli": "^3.0.0",
-    "@graphprotocol/client-urql": "^2.0.0",
-    "@nftylabs/nft-lists": "^0.0.3",
-    "@uniswap/token-lists": "^1.0.0-beta.33",
-    "alchemy-sdk": "^3.1.0",
-    "buffer": "^6.0.3",
+    "@graphprotocol/client-cli": "3.0.3",
+    "@graphprotocol/client-urql": "2.0.3",
+    "@nftylabs/nft-lists": "0.0.3",
+    "@uniswap/token-lists": "1.0.0-beta.34",
+    "alchemy-sdk": "3.3.1",
     "connectkit": "^1.5.3",
-    "graphql": "^16.8.1",
-    "process": "^0.11.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1",
-    "react-router-dom": "^6.20.1",
-    "react-window": "^1.8.10",
-    "urql": "^4.0.6",
-    "util": "^0.12.5",
+    "graphql": "16.8.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "7.51.4",
+    "react-router-dom": "6.23.0",
+    "react-window": "1.8.10",
+    "urql": "4.1.0",
     "viem": "^1.19.11",
     "wagmi": "^1.4.8"
   },
   "devDependencies": {
     "@biomejs/biome": "1.6.3",
-    "@types/bootstrap": "^5.2.10",
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
-    "@types/react-window": "^1.8.8",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@types/bootstrap": "5.2.10",
+    "@types/react": "18.3.2",
+    "@types/react-dom": "18.3.0",
+    "@types/react-window": "1.8.8",
+    "@vitejs/plugin-react": "4.2.1",
     "@wagmi/cli": "^1.5.2",
-    "vite": "^5.0.6"
+    "vite": "5.2.11"
   }
 }
